[package]
name = "ddns"
version = "0.2.0"
authors = ["Terrence Lam <skyuplam@gmail.com>"]

[dependencies]
trust-dns-resolver = "^0.8"
clap = "~2.30"
futures = "^0.1"
hyper = "^0.11"
hyper-tls = "^0.1"
tokio-core = "^0.1"
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
log = "^0.4"
fern = { version = "^0.5", features = ["syslog-3"] }
syslog = "^3.3.0"
