[package]
name = "ddns"
version = "0.4.0"
authors = ["Terrence Lam <skyuplam@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.1"
trust-dns-client = { version = "0.19", features = ["dns-over-rustls"] }
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
